compilateurDeca/src/test/deca/context/invalid/objet/appel_methode_sans_parenthese.deca
// Description:
//    Erreur de syntaxe : appel de méthode sans parenthèses vides.
//
// Resultats:
//    Erreur syntaxique ligne 14
//
// Historique:
//    cree le 13/01/2026

class A {
    void m() {}
}
{
    A a = new A();
    a.m;
}